fix contact form spacing on mobile

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -220,6 +220,8 @@ ul {
 }
 
 .contact {
+  margin-bottom: 30px;
+
   label {
     color: $teal;
   }
